--- a/style.css
+++ b/style.css
@@ -139,8 +139,9 @@ p{
 ul {
     list-style-position: inside;
     text-align: justify;
-    text-indent: 30px;
-    margin: 8px;
+    text-indent: 0px;
+    padding: 5px;
+    margin: 0px;
     margin-left: 0px;
     font-size: 1.1em;
 }
@@ -227,6 +228,8 @@ article {
 }
 
 ul#curiosidades{
+    text-align: left;
+    text-indent: 15px;
     padding-top: 0px;
     padding: 20px;
     font-size: 1.2em;
